[package]
name = "leptos-loro-time-travel-demo"
version = "0.1.0"
edition = "2021"
authors = ["Joaquim Simão <osmano807@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7.0-beta", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7.0-beta" }
leptos_router = { version = "0.7.0-beta", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

loro = {git = "https://github.com/loro-dev/loro.git", rev = "refs/pull/475/head"}
#loro = "*"

leptos-use = { git = "https://github.com/Synphonyte/leptos-use.git", branch = "leptos-0.7", default-features = false, features = [
  "use_debounce_fn",
  "use_throttle_fn",
  "use_timestamp",
] }

# Fix build error
getrandom = { version = "0.2", features = ["js"] }

average = "0.15.1"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"

[patch.crates-io]
leptos = { git = "https://github.com/leptos-rs/leptos.git" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos.git" }
leptos_router = { git = "https://github.com/leptos-rs/leptos.git" }

[dev-dependencies]
wasm-bindgen = "=0.2.93"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
